--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,24 +1,27 @@
-name: Trivy Vulnerability Scan
-on: [push, pull_request]
-
+name: build
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
-  trivy_scan:
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    runs-on: ubuntu-20.04
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Trivy
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        input: '.'
-        format: 'cyclonedx'
-        output: 'trivy-results.json'
-        severity: 'CRITICAL,HIGH'
-      
-    - name: Upload Trivy Scan Results
-      uses: actions/upload-artifact@v2
-      with:
-        name: trivy-results
-        path: trivy-results.json
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
