--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -26,3 +26,13 @@ jobs:
         with:
           name: trivy-results
           path: trivy-results.sarif
+          
+      - name: Upload BOM to Dependency Track
+        run: |
+          curl -X 'POST' \
+            'http://localhost:8080/api/v1/bom' \
+            -H 'accept: */*' \
+            -H 'X-API-Key: ${{ secrets.DEPENDENCY_TRACK_API_KEY_1 }}' \
+            -H 'Content-Type: multipart/form-data' \
+            -F 'project=[PROJECT_UUID]' \
+            -F 'bom=@trivy-results.json'
